[package]
name = "restricted-marker-transfer"
version = "0.2.0"
authors = ["Jason Talis <jtalis@figure.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.3.1" }
cosmwasm-storage = { version = "1.3.1" }
provwasm-std = { version = "2.0.0" }
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.64"
thiserror = { version = "1.0" }
uuid = { version= "0.8.2" }

[dev-dependencies]
prost = {version = "0.11.0", default-features = false}
cosmwasm-schema = { version = "1.3.1" }
provwasm-mocks = { version = "2.0.0" }
cw-multi-test = "0.13.2"
